--- a/views/products.ejs
+++ b/views/products.ejs
@@ -21,7 +21,7 @@
 
         <a href="<%= product.link %>" target="_blank" 
             class="drop-shadow-lg mt-4 block bg-orange-500 text-white px-4 py-2 rounded text-center transition-colors duration-300 delay-300 hover:bg-orange-600 hover:scale-105">
-             Buy on Amazon
+             View Product Details
          </a>
         <a href="/" class="mt-4 block text-center text-blue-500">⬅ Back to Store</a>
     </div>
